--- a/NewProject.html
+++ b/NewProject.html
@@ -26,7 +26,7 @@
       });
     });
     </script>
-<title>Project</title>
+<title>Project One</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
